--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Adding home layout</h3>
+
     {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
     {%- endif -%}
@@ -66,5 +66,23 @@ layout: default
     {%- endif %}
 
     {%- endif -%}
+
+    <h2>Categories</h2>
+
+    <ul>
+        {% assign categories_list = site.categories %}
+        {% if categories_list.first[0] == null %}
+        {% for category in categories_list %}
+        <li><a href="#{{ category | downcase | downcase | url_escape | strip | replace: ' ', '-' }}">{{ category |
+                camelcase }} ({{ site.tags[category].size }})</a></li>
+        {% endfor %}
+        {% else %}
+        {% for category in categories_list %}
+        <li><a href="#{{ category[0] | downcase | url_escape | strip | replace: ' ', '-' }}">{{ category[0] |
+                camelcase }} ({{ category[1].size }})</a></li>
+        {% endfor %}
+        {% endif %}
+        {% assign categories_list = nil %}
+    </ul>
 
 </div>
