--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
             </label>
 
             <div class="trigger">
-                <a class="page-link" href="https://digitalhumanities.thegui.eu/">Custom Header</a>
+                <a class="page-link" href="https://digitalhumanities.thegui.eu/">Digital Humanities</a>
                 {%- for path in page_paths -%}
                 {%- assign my_page = site.pages | where: "path", path | first -%}
                 {%- if my_page.title -%}
